--- a/Next Level Week Expert 2024/theForm.css
+++ b/Next Level Week Expert 2024/theForm.css
@@ -2,6 +2,7 @@
 *, :root {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -9,15 +10,97 @@
     -moz-osx-font-smoothing: grayscale; /*para o Mozilla Firefox*/
     -webkit-text-size-adjust: 100%;
 }
+body {
+    background-color: #0f172a;
+}
 main {
     padding: 20px;
     max-width: 640px;
-    margin: 0 auto; /*margem 0 no top e bottom e automática no left e right (distribui automaticamente o que sobra, igualmente, para os dois lados*/
+    margin: 0 auto 64px; /*margem 0 no top e bottom e automática no left e right (distribui automaticamente o que sobra, igualmente, para os dois lados*/
+}
+header {
+    margin-top: 64px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #334155;
+}
+header h1 {
+    margin-top: 24px;
+    font-size: 30px;
+    color: #f1f5f9;
+}
+header h2 {
+    font-size: 25px;
+    color: #939ca6;
+}
+#quiz {
+    counter-reset: num-quiz-item;
+}
+.quiz-item {
+    margin-top: 24px;
+    border: 1px solid #475569;
+    border-radius: 6px;
+    overflow: hidden; /*esconde o background que transborda do 'h3'*/
+}
+.quiz-item h3 {
+    padding: 16px 20px;
+    color: #e2e8f0;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    background-color: #1e293b;
+}
+.quiz-item h3:before {
+    counter-increment: num-quiz-item;
+    content: counter(num-quiz-item);
+    background-color: #475569;
+    width: 28px;
+    height: 28px;
+    font-size: 12px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0; /*para as bolinhas não deformarem de acordo com a largura da página*/
+}
+.quiz-item dl {
+    padding: 20px 24px;
+    display: grid;
+    gap: 8px; /*espaço adicionado entre os filhos do 'dl', os 'dt', não é em cima e nem em baixo, é entre os filhos, precisa do 'display:grid' ou 'flex' para funcionar*/
+}
+.quiz-item dl dt {
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0;
+    display: flex;
+    align-items: center; /*caixas de seleção e texto das alternativas ficam alinhados horizontalmente, precisa do 'display: flex' ou 'grid' no pai*/
+    gap: 8px;
+    color: #e2e8f0;
+}
+input {
+    all: unset; /*tira as configurações padrão do input, para assim, começar a estilizar*/
+    border: 1px solid #94a3b8;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center; /*alinha no centro horizontalmente*/
+    justify-content: center; /*alinha no centro verticalmente*/
+    flex-shrink: 0; /*para as bolinhas não deformarem de acordo com a largura da página*/
+}
+input:checked {
+    border: 1px solid#a3e635;
+}
+input:checked:before {
+    content: ""; /*um conteúdo imaginário é adicionado à check box para possibilitar a manipulação de altura, largura, etc.*/
+    width: 10px;
+    height: 10px;
+    background-color: #a3e635;
+    border-radius: 50%;
 }
 #hits {
     text-align: center;
     background-color: #a3e635;
-    position: fixed;
+    position: fixed; /*que não some quando rola a página*/
     bottom: 0;
     left: 0;
     width: 100%;
